--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://kit.fontawesome.com/48317ace59.js" crossorigin="anonymous"></script>
     
-    <title>Welcome to DevCrossroad</title>
+    <title>Welcome to DevConnector</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
